--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -1,6 +1,6 @@
-<!-- home.html -->
+<!-- contact.html -->
     <div class="jumbotron text-center">
-        <h1>Home Page</h1>
+        <h1>Book New Absence</h1>
 
         <p>{{ message }}</p>
     </div>
