--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
       <!-- SPELLS -->
       <!-- load angular and angular route -->
-<!--       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script> -->
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="script.js"></script>
+      <script src="pages/home/controllers/home.js" type="text/javascript"></script>
+      <script src="pages/contact/controllers/contact.js" type="text/javascript"></script>
+      <script src="pages/about/controllers/about.js" type="text/javascript"></script>
+      <script src="pages/about/services/data.js" type="text/javascript"></script>
 
       <!-- css stylesheet reference -->
       <link rel="stylesheet" type="text/css" href="styles/main.css">
@@ -28,7 +31,7 @@
             <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="">Angular Routing Page</a>
+                    <a class="navbar-brand" href="">Employee Absence Booking App</a>
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
