--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
       <!-- css stylesheet reference -->
       <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="styles/media_queries.css">
 
     </head>
     <!-- define angular controller -->
@@ -29,17 +30,17 @@
         <!-- HEADER AND NAVBAR -->
         <header>
             <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="">Employee Absence Booking App</a>
-                </div>
+              <div class="container">
+                  <div class="navbar-header">
+                      <a class="navbar-brand" href="">Absence Booking App</a>
+                  </div>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-                </ul>
-            </div>
+                  <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
+                      <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
+                      <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                  </ul>
+              </div>
             </nav>
         </header>
 
