--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -3,4 +3,54 @@
         <h1>Book New Absence</h1>
 
         <p>{{ message }}</p>
+        <div class="container">
+	        <table>
+				<tr>
+					<th>
+						<label>Type</label>
+	     			</th>
+					<th>
+						<label>Start Date</label>
+	     			</th>
+					<th>
+						<label>Start Time</label>
+	     			</th>
+					<th>
+						<label>End Date</label>
+	     			</th>			
+					<th>
+						<label>End Time</label>
+	     			</th>
+					<th>
+						<label>Notes</label>
+	     			</th>
+					<th>
+						<label></label>
+	     			</th>
+				</tr>				
+				<tr>
+					<th>
+						<input type="text"></input>
+	     			</th>
+					<th>
+						<input type="date"></input>
+	     			</th>
+					<th>
+						<input type="time"></input>
+	     			</th>			
+					<th>
+						<input type="date"></input>
+	     			</th>
+					<th>
+						<input type="time"></input>
+	     			</th>
+					<th>
+						<input type="textbox"></input>
+	     			</th>
+					<th>
+						<button>Book</button>
+	     			</th>	     			
+				</tr>
+			</table>
+		</div>
     </div>
