--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -43,14 +43,14 @@
 					</td>     
 					<td>
 						{{absence.start_date}}
-					    <input ng-blur="editing = false;" ng-show="editing" ng-model="absence.start_date" type="date" />						
+					    <input ng-blur="editing = false;" ng-show="editing" ng-model="absence.start_date" type="dateString" />						
 					</td> 
 					<td>
 						{{absence.start_time}}
 					</td> 
 					<td>
 						{{absence.end_date}}
-					    <input ng-blur="editing = false;" ng-show="editing" ng-model="absence.end_date" type="date" />							
+					    <input ng-blur="editing = false;" ng-show="editing" ng-model="absence.end_date" type="dateString" />							
 					</td> 
 					<td>
 						{{absence.end_time}}
