--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -2,5 +2,6 @@
     <div class="jumbotron text-center">
         <h1>Employee Absence Booking App</h1>
 
-        <p>{{ message }}</p>
+        <p>Everyone come and see how good my single-page app for booking employee absence is!</p>
+        <p>Contact me! My e-mail address is thomasemmerson@sky.com.</p>
     </div>
