--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </head>
     <!-- define angular controller -->
-    <body ng-controller="mainController">
+    <body>
 
         <!-- HEADER AND NAVBAR -->
         <header>
