update all working

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -34,7 +34,7 @@
          			</th>
 					<th>Actions</th>
 				</tr>
-				<tr ng-repeat="absence in absences | orderBy:predicate:reverse" ng-class="{'editing-item': editing}">
+				<tr ng-repeat="absence in about.absences | orderBy:predicate:reverse" ng-class="{'editing-item': editing}">
 					<td>
 						{{absence.name}}
 					</td> 
