--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -22,12 +22,12 @@
 				<input type="submit" ng-click="update(absences)" value="Book" />
 				<input type="button" ng-click="reset()" value="Reset" />
  			</form>  
- 			<p>Name: {{absence.name}}</p><br>		
+<!--  		<p>Name: {{absence.name}}</p><br>		
  			<p>Type: {{absence.type}}</p><br>
  			<p>Start date: {{absence.start_date | date:"dd/MM/yyyy"}}</p><br>
  			<p>Start time: {{absence.start_time | date:"hh:mm"}}</p><br>
  			<p>End date: {{absence.end_date | date:"dd/MM/yyyy"}}</p><br>
  			<p>End time: {{absence.end_time | date:"hh:mm"}}</p><br>
- 			<p>Notes: {{absence.notes}}</p><br>
+ 			<p>Notes: {{absence.notes}}</p><br> -->
 		</div>
     </div>
