--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -6,19 +6,19 @@
         <div class="container">
 			<form novalidate class="simple-form">
 				<label>Name</label>
-				<input type="text" ng-model="absence.name"></input>
+				<input type="text" ng-model="newArray.name"></input>
 				<label>Type</label>
-				<input type="text" ng-model="absence.type"></input>
+				<input type="text" ng-model="newArray.type"></input>
 				<label>Start Date</label>
-				<input type="date" ng-model="absence.start_date"></input>
+				<input type="date" ng-model="newArray.start_date"></input>
 				<label>Start Time</label>
-				<input type="time" ng-model="absence.start_time"></input>
+				<input type="time" ng-model="newArray.start_time"></input>
 				<label>End Date</label>
-				<input type="date" ng-model="absence.end_date"></input>
+				<input type="date" ng-model="newArray.end_date"></input>
 				<label>End Time</label>
-				<input type="time" ng-model="absence.end_time"></input>
+				<input type="time" ng-model="newArray.end_time"></input>
 				<label>Notes</label>
-				<input type="textbox" ng-model="absence.notes"></input>
+				<input type="textbox" ng-model="newArray.notes"></input>
 				<input type="submit" ng-click="update(absences)" value="Book" />
 				<input type="button" ng-click="reset()" value="Reset" />
  			</form>  
