--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             </nav>
         </header>
 
-    <!-- MAIN CONTENT AND INJECTED VIEWS -->
-    <div id="main">
-        <!-- angular templating -->
-        <!-- this is where content will be injected -->
-        <div ng-view></div>
-    </div>
-
+      <!-- MAIN CONTENT AND INJECTED VIEWS -->
+      <div id="main">
+          <!-- angular templating -->
+          <!-- this is where content will be injected -->
+          <div ng-view></div>
+      </div>
+      <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     </body>
     </html>
