--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <!-- this is where content will be injected -->
           <div ng-view></div>
       </div>
+      <!-- livereload code snippet -->
       <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     </body>
     </html>
